tests/ui/type-alias-impl-trait/const_generic_type.infer.stderr
error: `Bar` is forbidden as the type of a const generic parameter
  --> $DIR/const_generic_type.rs:8:24
   |
LL | async fn test<const N: Bar>() {
   |                        ^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: the constant `N` is not of type `u32`
  --> $DIR/const_generic_type.rs:8:31
   |
LL |   async fn test<const N: Bar>() {
   |  _______________________________^
...  |
LL | |     let x: u32 = N;
LL | | }
   | |_^ expected `u32`, found opaque type
   |
note: required by a const generic parameter in `test`
  --> $DIR/const_generic_type.rs:8:15
   |
LL | async fn test<const N: Bar>() {
   |               ^^^^^^^^^^^^ required by this const generic parameter in `test`

error: aborting due to 2 previous errors

